<resources>
    <string name="app_name">NASF</string>
    <string name="Splash_Message">NASF</string>
    <string name="Splash_Message1">DSS for</string>
    <string name="Splash_Message2">Nutrient Management</string>
    <string name="Splash_Message3">in Rice-Wheat System in IGP</string>
    <string name="Splash_Message4">आईजीपी में चावल-गेहूं प्रणाली में पोषक तत्व प्रबंधन के लिए डीएसएस</string>
    <string name="Empty_text"> </string>
    <string name="Login">Login Page</string>
    <string name="Login1">----------------------------------------------------------------------</string>
    <string name="login_btn">Login</string>
    <string name="dashboard_english">How you want to Estimate Yield</string>
    <string name="dashboard_hindi">आप उपज का अनुमान कैसे लगाना चाहते हैं</string>
    <string name="dashboard_manual">Manually / स्वयं</string>
    <string name="dashboard_automatic">Automatically / स्वतः</string>
    <string name="dashboard_management">Management System  प्रबंधन प्रणाली</string>
    <string name="location_values_english">Part 1: Enter Location Details</string>
    <string name="location_values_hindi">भाग 1: स्थान मान दर्ज करें</string>
    <string name="soil_values_hindi">भाग 2: मिट्टी के मूल्य दर्ज करें</string>
    <string name="soil_values_english">Part 2: Enter Soil Details</string>
    <string name="management_values_hindi">भाग 3: प्रबंधन मान दर्ज करें</string>
    <string name="management_values_english">Part 2: Enter Management Details</string>
    <string name="automatic_values_hindi">भाग 2: प्रबंधन मान दर्ज करें</string>
    <string name="automatic_values_english">Part 2: Enter Management Details</string>
    <string name="weather_details_hindi_manual">भाग 4: मौसम विवरण</string>
    <string name="weather_details_english_manual">Part 4: Weather Details</string>
    <string name="weather_details_hindi_automatic">भाग 3: मौसम विवरण</string>
    <string name="weather_details_english_automatic">Part 3: Weather Details</string>
    <string name="weather_details_hindi_management">भाग 2: मौसम विवरण</string>
    <string name="weather_details_english_management">Part 2: Weather Details</string>
    <string name="soil_management_hindi">स्थान और लक्ष्य उपज दर्ज करें</string>
    <string name="soil_management_english">Enter Location and Target Yield</string>
    <string name="nutrient_next">Next ➤</string>
    <string name="management_next">Calculate ⏳</string>
    <string name="calculate_yield">Calculate Yield</string>
    <string name="get_details">Crop Management Advisory</string>
    <string name="icar_logo">ICAR Logo</string>
    <string name="iari_logo">IARI Logo</string>
</resources>