<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/logo_1"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/Empty_text"
                    tools:ignore="SpUsage"
                    android:textColor="@color/light_brown">

                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icar"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/logo_size1"
                    android:layout_weight="1"
                    android:src="@drawable/icar_logo"
                    android:contentDescription="@string/icar_logo">
                </ImageView>

                <ImageView
                    android:id="@+id/logo1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/logo_size1"
                    android:layout_weight="1"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/iari_logo">
                </ImageView>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/Login1"
                    android:textSize="@dimen/empty_text1"
                    tools:ignore="SpUsage"
                    android:textColor="@color/dark_blue">

                </TextView>

            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_login"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/Login"
                    android:textSize="@dimen/login_text1"
                    tools:ignore="SpUsage"
                    android:textColor="@color/dark_blue">

                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/Empty_text"
                    tools:ignore="SpUsage"
                    android:textColor="@color/light_brown">

                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.50"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColorHint="@color/dark_blue"
                    android:drawableRight="@drawable/ic_user"
                    android:hint="User Name / उपयोगकर्ता का नाम"
                    android:textSize="@dimen/empty_text1">
                </EditText>

            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/Empty_text"
                    tools:ignore="SpUsage"
                    android:textColor="@color/light_brown">

                </TextView>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.50"
                    android:inputType="textPassword"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:drawableRight="@drawable/ic_password"
                    android:hint="Password / पासवर्ड"
                    android:textColorHint="@color/dark_blue"
                    android:textSize="@dimen/empty_text1">

                </EditText>


            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/Empty_text"
                    tools:ignore="SpUsage"
                    android:textColor="@color/light_brown">

                </TextView>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/login_btn"
                    android:textSize="@dimen/login_text1"
                    tools:ignore="SpUsage">

                </Button>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:visibility="invisible"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:max="100"
                    android:progress="0"
                    android:scrollbarSize="@dimen/splash_text1"
                    style="?android:attr/progressBarStyleHorizontal" >

                </ProgressBar>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/signupText"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:text="Create a new account? Sign-up/एक नया खाता बनाएं? साइन अप करें"
                    android:textSize="15dp"
                    tools:ignore="SpUsage">
                </TextView>
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>